Release 1.6.0